--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "next": "16.1.1",
+    "nextjs": "^0.0.3",
     "nodemailer": "^7.0.12",
     "puppeteer": "^24.34.0",
     "react": "19.2.3",
